--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="about-us-text">
                     <h2 class="text-lg">About <span>Us</span></h2>
-                    <p class="text-sm">DevHub by Olajoseph, is a forward-thinking technology company dedicated to delivering innovative, reliable, and tailored digital solutions to businesses and organizations worldwide. Founded on the principles of creativity, functionality, and excellence, we specialize in designing and developing cutting- edge web and mobile applications that empower businesses to achieve their goals and exceed their expectations. With a passionate team of experienced developers, designers, and strategists, we aim to be a trusted partner in your digital transformation journey.</p>
+                    <p class="text-sm">DevHub by Olajoseph is a technology company specializing in innovative and tailored digital solutions. We design and develop cutting-edge web and mobile applications to help businesses achieve their goals with creativity, functionality, and excellence. </p>
                 </div>
             </div>
         </section>
@@ -159,7 +159,7 @@
             <h2 class="text-lg text-center"><span>What</span> we offer</h2>
             <div class="offer-grid-con">
                 <div class="offer-con">
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>Custom web application development</h2>
@@ -167,7 +167,7 @@
                         </div>
                     </div>
 
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>Mobile Application Development</h2>
@@ -175,7 +175,7 @@
                         </div>
                     </div>
 
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>Cloud Integration Services</h2>
@@ -187,7 +187,7 @@
                     <img src="./assets/images/iphone display.png" alt="image">
                 </div>
                 <div class="offer-con offer-con2">
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>UI/UX Design</h2>
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>Business Automation Tools</h2>
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                       
-                    <div class="box">
+                    <div class="box" data-aos="zoom-in-right">
                         <span></span>
                         <div class="content">
                             <h2>E-commerce Solutions</h2>
@@ -316,7 +316,7 @@
                     <h2 class="text-lg">Contact <span>Us</span></h2>
                     <p class="text-md">Feel free to contact us anytime, we will get back to you as soon as we can!</p>
                     <div class="contact-Form">
-                        <form action="https://api.web3forms.com/submit" method="POST" id="contactForm" data-aos="zoom-in"> 
+                        <form action="https://api.web3forms.com/submit"     method="POST" id="" data-aos="zoom-in"> 
                             <div class="form">
                                 <input type="hidden" name="access_key" value="f646d0d7-a38a-4fbb-b293-4ac2430473fe">
                                 <input type="hidden" name="redirect" value="http://127.0.0.1:5500/">
@@ -444,7 +444,7 @@
         window.addEventListener("load", function(){
             setTimeout(function(){
                 loader.style.display = "none"
-            }, 3500);
+            }, 2000);
         });
     </script>
 </body>
