--- a/index.html
+++ b/index.html
@@ -63,22 +63,23 @@
 
     <section id="home">
         <div class="hero-section">
-            <div class="hero-section-background">
-                <div class="container">
-                    <div class="div">
-                        <h1 class="text-xl text-center">
-                            Tranforming the future, one step at a time.
-                        </h1>
-                        <p class="text-md text-center">Leverage on our expertise in unlocking the power of innovation and enhancing busineses to thrive in a digital world.</p>
-                        <div class="btn-section">
-                            <a href="#contactForm">
-                                <button type="button" class="btn btn1">Get Started</button>
-                            </a>
-                            <a href="#contactForm"> <button type="button" class="btn btn2">Learn More <i class="fa-solid fa-arrow-right" style="color: #004882;"></i></button></a>
-                        </div>
+            <img src="./assets/images/hero-bg2.jpg" alt="background image">
+        </div>
+        <div class="hero-section-background">
+            <div class="container">
+                <div class="div">
+                    <h1 class="text-xl text-center">
+                        Tranforming the future, one step at a time.
+                    </h1>
+                    <p class="text-md text-center">Leverage on our expertise in unlocking the power of innovation and enhancing busineses to thrive in a digital world.</p>
+                    <div class="btn-section">
+                        <a href="#contactForm">
+                            <button type="button" class="btn btn1">Get Started</button>
+                        </a>
+                        <a href="#contactForm"> <button type="button" class="btn btn2">Learn More <i class="fa-solid fa-arrow-right" style="color: #004882;"></i></button></a>
                     </div>
                 </div>
-             </div>
+            </div>
         </div>
     </section>
     
@@ -444,7 +445,7 @@
         window.addEventListener("load", function(){
             setTimeout(function(){
                 loader.style.display = "none"
-            }, 2000);
+            }, 500);
         });
     </script>
 </body>
